Wed Oct  8 19:14:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * performance-tests/CSD_Strategy/TestApps/ClientApp.cpp
        * performance-tests/CSD_Strategy/TestApps/ClientApp.h
        * performance-tests/CSD_Strategy/TestApps/ServerApp.cpp
        * performance-tests/CSD_Strategy/TestApps/ServerApp.h
        * performance-tests/CSD_Strategy/TestInf/AppHelper.cpp
        * performance-tests/CSD_Strategy/TestInf/AppHelper.h
        * performance-tests/CSD_Strategy/TestInf/ServantList_T.cpp
        * performance-tests/CSD_Strategy/TestInf/ServantList_T.h
        * performance-tests/Cubit/TAO/DII_Cubit/client.cpp
        * performance-tests/Cubit/TAO/IDL_Cubit/client.cpp
        * performance-tests/Cubit/TAO/IDL_Cubit/Cubit_Client.cpp
        * performance-tests/Cubit/TAO/IDL_Cubit/Cubit_Client.h
        * performance-tests/Cubit/TAO/IDL_Cubit/server.cpp
        * performance-tests/Pluggable/PP_Test_Client.cpp
        * performance-tests/Pluggable/PP_Test_Client.h
          ACE_TCHAR fixes

Wed Oct  8 18:31:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_global.cpp:
          gperf now compiles in a unicode build so invoke gperf

Wed Oct  8 18:17:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/driver/drv_preproc.cpp:
          Use the new ACE_HAS_TCHAR_DIRENT to be able to compile this code
          with wchar enabled

Wed Oct  8 15:35:46 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_typecode/union_typecode.cpp:

          Changed an overlooked loop variable's type from unsigned long
          to ACE_CDR::ULong, since the loop index is also passed to
          the TAO_OutStream insertion operator.

Wed Oct  8 14:46:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/ImplRepo/airplane_client_i.cpp
        * orbsvcs/tests/ImplRepo/airplane_client_i.h
        * orbsvcs/tests/ImplRepo/nestea_client_i.cpp