@@ -123,7 +123,7 @@ public:
   // Initialize naming service
 
 protected:
-  int read_ior (char *filename);
+  int read_ior (ACE_TCHAR *filename);
   // Function to read the server IOR from a file.
 
   int parse_args (void);
