@@ -268,7 +268,7 @@ Client<INTERFACE_OBJECT, Var>::Client (void)
 // Reads the Server ior from a file
 
 template <class INTERFACE_OBJECT, class Var> int
-Client<INTERFACE_OBJECT, Var>::read_ior (char *filename)
+Client<INTERFACE_OBJECT, Var>::read_ior (ACE_TCHAR *filename)
 {
   // Open the file for reading.
   ACE_HANDLE f_handle = ACE_OS::open (filename, 0);
